service-myjenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector: 
    app: jenkins-server
  ports:
    - port: 8080
      name: "https"
      targetPort: 8080
      # nodePort: 32000
    - port: 50000
      name: "slave"
      targetPort: 50000
      nodePort: 32767
