example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - devops.greengold.id
      secretName: letsencrypt
  rules:
    - host: devops.greengold.id
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: app
# spec:
#   selector:
#     app: app
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app-deployment
#   labels:
#     app: app
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: app
#   template:
#     metadata:
#       labels:
#         app: app
#     spec:
#       containers:
#       - name: app
#         image: nginx:latest
#         ports:
#         - containerPort: 80
