ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-jenkins"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - jenkins.greengold.id
      secretName: letsencrypt-jenkins
  rules:
    - host: jenkins.greengold.id
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
